--- a/src/pages/pharma-form.html
+++ b/src/pages/pharma-form.html
@@ -26,50 +26,50 @@
         <div class="box">
         <form action="">
             <fieldset>
-                <legend><b>Cadastro de Farmácia</b></legend>
                 <br>
-                <div>
+                <div class="form-sections">
                     <label for="nome" class="labelInput">Nome Fantasia</label>
-                    <input type="text" name="nome" id="nome" class="inputUser" required>
+                    <input type="text" name="nome" id="nome" class="input-stardard" required>
                 </div>
                 <br>
-                <div>
+                <div class="form-sections">
                     <label for="razao">Razão Social</label>
-                    <input type="text" name="razao" id="razao" class="inputUser" required>
+                    <input type="text" name="razao" id="razao" class="input-stardard" required>
                 </div>
                 <br>
-                <div>
+                <div class="form-sections">
                     <label for="cnpj">CNPJ</label>
-                    <input type="text" name="cnpj" id="cnpj" class="inputUser" required>
+                    <input type="text" name="cnpj" id="cnpj" class="input-stardard" required>
                 </div>
                 <br>
-                <div>
+                <div class="form-sections">
                     <label for="endereco">Endereço</label>
-                    <input type="text" name="endereco" id="endereco" class="inputUser" required>
+                    <input type="text" name="endereco" id="endereco" class="input-stardard" required>
                     <label for="endereco">Cidade</label>
-                    <input type="text" name="cidade" id="cidade" class="inputUser" size="5"required>
+                    <input type="text" name="cidade" id="cidade" class="input-stardard" size="5"required>
                     <label for="estado">Estado</label>
-                    <input type="text" name="estado" id="estado" class="inputUser" size="5"required>
+                    <input type="text" name="estado" id="estado" class="input-stardard" size="5"required>
                 </div>
                 <br>
-                <div>
+                <div class="form-sections">
                     <label for="telefone">Telefone</label>
-                    <input type="text" name="telefone" id="telefone" class="inputUser" required>
+                    <input type="text" name="telefone" id="telefone" class="input-stardard" required>
                 </div>
                 <br>
-                <div>
+                <div class="form-sections">
                     <label for="email">E-mail</label>
-                    <input type="text" name="email" id="email" class="inputUser" required>
+                    <input type="text" name="email" id="email" class="input-stardard" required>
                 </div>
                 <br>
-                <div>
+                <div class="form-sections">
                     <label for="responsavel">Responsável</label>
-                    <input type="text" name="responsavel" id="responsavel" class="inputUser" required>
+                    <input type="text" name="responsavel" id="responsavel" class="input-stardard" required>
                 </div>
-            </fieldset>
-            <button><a href="index.html">Voltar</a></button> 
-            <button>Salvar</button> 
-            <button>Faça Login</button></p>
+                <div class="section-buttons">
+                  <button onclick="window.location.href='../../index.html'">Voltar</button> 
+                  <button>Salvar</button>
+                </div>
+            </fieldset>  
         </form>
         </div>
     </div>
