posicionando imagem, css finalizado

--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -28,7 +28,9 @@
     <main class="display-main" id="root">
         <div class="first-display" id="subscription-perfil-page">
             <section class="sect-one">
-                <!-- <img class="image-perfil" src="../assets/images/close-up-asian-woman-outdoors_23-2149032780.avif" alt="mulher asiática"> -->
+                <div class="relative-image">
+                    <img class="image-perfil" src="../assets/images/close-up-asian-woman-outdoors-recorte (1).jpg" alt="mulher asiática">
+                </div>
                 <div class="name-perfil">
                     <p class="different-font">JANE DOE</p>
                 </div>
@@ -38,14 +40,16 @@
                     <a class="link-a" href="">FALE<br>CONOSCO</a>
                 </div>
                 <div class="campaign-flex">
-                    <div>
+                    <div class="item-campanha">
                         <p class="campaign-status">CAMPANHAS ATIVAS</p>
-                        <p class="campaign-status">CAMPANHAS FINALIZADAS</p>
-                        <p class="campaign-status">FARMÁCIAS VINCULADAS</p>
-                    </div>
-                    <div>
                         <p class="campaign-number different-font">1</p>
+                    </div>
+                    <div class="item-campanha">
+                        <p class="campaign-status">CAMPANHAS FINALIZADAS</p>
                         <p class="campaign-number different-font">2</p>
+                    </div>
+                    <div class="item-campanha">
+                        <p class="campaign-status">FARMÁCIAS VINCULADAS</p>
                         <p class="campaign-number different-font">3</p>
                     </div>
                 </div>
