colocando responsividade na tela user-form

--- a/src/pages/user-form.html
+++ b/src/pages/user-form.html
@@ -26,8 +26,12 @@
       <div id="subscription-user-page">
       
       <section>
-        <div>
-          <img class="image" src="../assets/images/pilula-coracao-form.jpeg" alt="Frasco de pilulas em formato de coração">
+        <div class="pic">
+          <picture>
+            <source media="(max-width: 450px)" srcset="../assets/images/pilula-coracao-form-recort.jpeg">
+            <source media="(min-width: 768px) and (max-width: 1024px)" srcset="../assets/images/pilula-coracao-form-trecort.jpeg">
+            <img class="image" src="../assets/images/pilula-coracao-form.jpeg" alt="Frasco de pilulas em formato de coração">
+          </picture>
         </div>
         <div class="right">
           <p class="text1">
