iniciando responsividade na perfil-page

--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -25,11 +25,14 @@
 <body>
     <cure-header options="home,suporter,pharmacy,campaign" origin="page"></cure-header>
     
-    <main class="display-main" id="root">
+    <main id="root">
         <div class="first-display" id="subscription-perfil-page">
             <section class="sect-one">
                 <div class="relative-image">
-                    <img class="image-perfil" src="../assets/images/close-up-asian-woman-outdoors-recorte (1).jpg" alt="mulher asiática">
+                    <picture>
+                        <source media="(max-width: 450px)" srcset="../assets/images/close-up-asian-woman-outdoors.jpg">
+                        <img class="image-perfil" src="../assets/images/close-up-asian-woman-outdoors-recorte (1).jpg" alt="mulher asiática">
+                    </picture>
                 </div>
                 <div class="name-perfil">
                     <p class="different-font">JANE DOE</p>
