--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -42,23 +42,25 @@
                     <img src="../assets/images/vector-edit.png" alt="vector-edit">
                     <a class="link-a" href="">FALE<br>CONOSCO</a>
                 </div>
-                <div class="campaign-flex">
-                    <div class="item-campanha">
-                        <p class="campaign-status">CAMPANHAS ATIVAS</p>
-                        <p class="campaign-number different-font">1</p>
+                <div class="container-mobile">
+                    <div class="campaign-flex">
+                        <div class="item-campanha">
+                            <p class="campaign-status">CAMPANHAS ATIVAS</p>
+                            <p class="campaign-number different-font">1</p>
+                        </div>
+                        <div class="item-campanha">
+                            <p class="campaign-status">CAMPANHAS FINALIZADAS</p>
+                            <p class="campaign-number different-font">2</p>
+                        </div>
+                        <div class="item-campanha">
+                            <p class="campaign-status">FARMÁCIAS VINCULADAS</p>
+                            <p class="campaign-number different-font">3</p>
+                        </div>
                     </div>
-                    <div class="item-campanha">
-                        <p class="campaign-status">CAMPANHAS FINALIZADAS</p>
-                        <p class="campaign-number different-font">2</p>
+                    <div class="button-flex">
+                        <button>Adicionar Farmácia</button>
+                        <button>Solicitar Medicamento</button>
                     </div>
-                    <div class="item-campanha">
-                        <p class="campaign-status">FARMÁCIAS VINCULADAS</p>
-                        <p class="campaign-number different-font">3</p>
-                    </div>
-                </div>
-                <div class="button-flex">
-                    <button>Adicionar Farmácia</button>
-                    <button>Solicitar Medicamento</button>
                 </div>
             </section>
             <section class="sect-two">
@@ -69,8 +71,8 @@
                         <p class="size-p">Paracetamol 750mg</p>
                     </div>
                     <div>
-                        <p class="ajust">Data de Expiração: xx/xx/xxxx </p>
-                        <p class="ajust">Percentual Alcançado: XX%</p>
+                        <p class="inform">Data de Expiração: xx/xx/xxxx </p>
+                        <p class="inform">Percentual Alcançado: XX%</p>
                     </div>
                 </div>
                 <div class="group-campaign">
@@ -79,8 +81,8 @@
                         <p class="size-p">Paracetamol 750mg</p>
                     </div>
                     <div>
-                        <p class="ajust">Data de Expiração: xx/xx/xxxx </p>
-                        <p class="ajust">Percentual Alcançado: XX%</p>
+                        <p class="inform">Data de Expiração: xx/xx/xxxx </p>
+                        <p class="inform">Percentual Alcançado: XX%</p>
                     </div>
                 </div>
                 <p class="element-p" id="element-aprov">AGUARDANDO APROVAÇÃO</p>
@@ -90,8 +92,8 @@
                         <p class="size-p">Paracetamol 750mg</p>
                     </div>
                     <div>
-                        <p class="ajust">Data de Expiração: xx/xx/xxxx </p>
-                        <p class="ajust">Percentual Alcançado: XX%</p>
+                        <p class="inform">Data de Expiração: xx/xx/xxxx </p>
+                        <p class="inform">Percentual Alcançado: XX%</p>
                     </div>
                 </div>
             </section>
