finalizando eventos javascript

--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -11,6 +11,7 @@
     <!--styles-->
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/perfil.css">
+    <script src="../scripts/perfil.js" defer></script>
 
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,8 +59,8 @@
                         </div>
                     </div>
                     <div class="button-flex">
-                        <button>Adicionar Farmácia</button>
-                        <button>Solicitar Medicamento</button>
+                        <button id="adicionar" type="button">Adicionar Farmácia</button>
+                        <button id="solicitar" type="button">Solicitar Medicamento</button>
                     </div>
                 </div>
             </section>
