criando login e pharma js, alterando html de pharma e login

--- a/src/pages/campaign-request.html
+++ b/src/pages/campaign-request.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <cure-header options="home,suporter,pharmacy,user,campaign,login" origin="page"></cure-header>
+    <cure-header options="home,suporter,pharmacy" origin="page"></cure-header>
     <main id="root">
         <div class="subscription-campaign-request">
             <div class="second-box">
