--- a/src/pages/user-form.html
+++ b/src/pages/user-form.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <cure-header
-    options="home,user,campaign,login"
+    options="home,suporter,pharmacy,login"
     origin="page"
   ></cure-header>
     <main id="root">
