--- a/src/pages/campaign.html
+++ b/src/pages/campaign.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <cure-header 
-      options="home,suporter,pharmacy,user,campaign,login"
+      options="home,suporter,pharmacy,user,login"
       origin="page"
     ></cure-header>
     <main>
