--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <cure-header options="home,suporter,pharmacy,campaign" origin="page"></cure-header>
+    <cure-header options="home,suporter,pharmacy" origin="page"></cure-header>
     
     <main id="root">
         <div class="first-display" id="subscription-perfil-page">
@@ -59,7 +59,6 @@
                         </div>
                     </div>
                     <div class="button-flex">
-                        <button id="adicionar" type="button">Adicionar Farmácia</button>
                         <button id="solicitar" type="button">Solicitar Medicamento</button>
                     </div>
                 </div>
