--- a/src/pages/pagamento.html
+++ b/src/pages/pagamento.html
@@ -29,6 +29,7 @@
                 <div class="form-title">
                     <h1>Sua doação é essencial!</h1>
                 </div>
+
                 <div class="second-box">
                     <form action="" class="first-form">
                         <legend>Preencha os campos corretamente e escolha uma forma de pagamento:</legend>
@@ -90,9 +91,9 @@
                     </form>
 
                 </div>
-                <div class="button">
-                    <button type="submit" class="form-btn">Confirmar</button>
-                    <a href="index.html"><button class="cancel">Cancelar</button></a>
+                <div class="button-flex">
+                    <button class="butype-1" type="button" onclick="resetar()" id="reset">Cancelar</button>
+                    <button class="butype-2" type="button" onclick="validarCampos()">Salvar</button>
                 </div>
             </div>
         </div>
