Finalizando formulário farmácia e modificando html para manipulação no js

--- a/src/pages/pharma-form.html
+++ b/src/pages/pharma-form.html
@@ -35,41 +35,50 @@
               <br>
               <div class="form-sections">
                 <label for="nome" class="labelInput">Nome Fantasia</label>
-                <input type="text" name="nome" id="nome" class="input-stardard" required>
+                <input type="text" name="nome" id="nome" class="input-stardard">
+                <p id="nome-helper" class="helper-text">Mensagem de ajuda</p>
               </div>
               <br>
               <div class="form-sections">
                 <label for="razao">Razão Social</label>
-                <input type="text" name="razao" id="razao" class="input-stardard" required>
+                <input type="text" name="razao" id="razao" class="input-stardard">
+                <p id="razao-helper" class="helper-text">Mensagem de ajuda</p>
               </div>
               <br>
               <div class="form-sections">
                 <label for="cnpj">CNPJ</label>
-                <input type="text" name="cnpj" id="cnpj" class="input-stardard" required>
+                <input type="text" name="cnpj" id="cnpj" class="input-stardard">
+                <p id="cnpj-helper" class="helper-text">Mensagem de ajuda</p>
               </div>
               <br>
               <div class="form-sections">
                 <label for="endereco">Endereço</label>
-                <input type="text" name="endereco" id="endereco" class="input-stardard" required>
-                <label for="endereco">Cidade</label>
-                <input type="text" name="cidade" id="cidade" class="input-stardard" size="5" required>
+                <input type="text" name="endereco" id="endereco" class="input-stardard">
+                <p id="endereco-helper" class="helper-text">Mensagem de ajuda</p>
+                <label for="cidade">Cidade</label>
+                <input type="text" name="cidade" id="cidade" class="input-stardard" size="5">
+                <p id="cidade-helper" class="helper-text">Mensagem de ajuda</p>
                 <label for="estado">Estado</label>
-                <input type="text" name="estado" id="estado" class="input-stardard" size="5" required>
+                <input type="text" name="estado" id="estado" class="input-stardard" size="5">
+                <p id="estado-helper" class="helper-text">Mensagem de ajuda</p>
               </div>
               <br>
               <div class="form-sections">
                 <label for="telefone">Telefone</label>
-                <input type="text" name="telefone" id="telefone" class="input-stardard" required>
+                <input type="text" name="telefone" id="telefone" class="input-stardard">
+                <p id="telefone-helper" class="helper-text">Mensagem de ajuda</p>
               </div>
               <br>
               <div class="form-sections">
                 <label for="email">E-mail</label>
-                <input type="text" name="email" id="email" class="input-stardard" required>
+                <input type="text" name="email" id="email" class="input-stardard">
+                <p id="email-helper" class="helper-text">Mensagem de ajuda</p>
               </div>
               <br>
               <div class="form-sections">
                 <label for="responsavel">Responsável</label>
-                <input type="text" name="responsavel" id="responsavel" class="input-stardard" required>
+                <input type="text" name="responsavel" id="responsavel" class="input-stardard">
+                <p id="responsavel-helper" class="helper-text">Mensagem de ajuda</p>
               </div>
                 <div class="button-flex">
                   <button class="butype-1" type="button" onclick="resetar()" id="reset">Cancelar</button>
